k8s/api-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-postgres
  template:
    metadata:
      labels:
        component: api-postgres
    spec:
      volumes:
        - hostPath:
            path: "/home/docker/pgdata"
          name: api-postgres-storage
        # - name: api-postgres-storage
        #   persistentVolumeClaim:
        #     claimName: api-postgres-pvc
      containers:
        - name: api-postgres
          image: postgres:10.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: api-postgres-storage
---
apiVersion: v1
kind: Service
metadata:
  name: api-postgres-srv
spec:
  type: ClusterIP
  selector:
    component: api-postgres
  ports:
    - name: apipostgres
      protocol: TCP
      targetPort: 5432
      port: 5432
