k8s/api-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-server
  template:
    metadata:
      labels:
        component: api-server
    spec:
      containers:
        - image: us.gcr.io/kalamna-api/api-service
          name: api-server-deployment
          ports:
            - containerPort: 3000
          env: # TODO Create a config map you lazy guy
            - name: JWT_SECRET
              valueFrom:
                secretKeyRef:
                  key: JWT_SECRET
                  name: jwt-secret
            - name: DB_URL
              value: api-postgres-srv
            - name: DB_USER
              value: OreWaOre
            - name: DB_PASSWORD
              value: bokeboke
            - name: DB_DATABASE
              value: api-db

---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    component: api-server
  ports:
    - name: api
      protocol: TCP
      targetPort: 3000
      port: 3000
