k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-router
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: kalamna.make
      http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: api-service
              servicePort: 3000
